--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             content: '';
             width: 80px;
             height: 80px;
-            background-image: url('/static/MattGPT.png');
+            background-image: url"MattGPT.png";
             background-size: contain;
             background-repeat: no-repeat;
             background-position: center;
