--- a/index.html
+++ b/index.html
@@ -633,13 +633,13 @@
                             🎙️ Daily Tech Digest
                         </div>
                         <div class="item-meta">
-                            📅 2025-06-27 • ⏱️ 12:34
+                            📅 2025-06-23
                         </div>
                         <div class="item-description">
                             AI-generated discussion covering today's hottest tech topics, including breakthrough developments in machine learning and emerging startup innovations.
                         </div>
-                        <a href="podcast/daily_tech_digest_2025-06-27.mp3" class="download-button" download>
-                            📥 Download (8.2 MB)
+                        <a href="podcast/podcast_20250623.mp3" class="download-button" download>
+                            📥 Download (22.8 MB)
                         </a>
                     </div>
                     
@@ -648,13 +648,13 @@
                             🎙️ Research Roundup
                         </div>
                         <div class="item-meta">
-                            📅 2025-06-26 • ⏱️ 15:21
+                            📅 2025-06-24
                         </div>
                         <div class="item-description">
                             Weekly research highlights featuring cutting-edge papers from arXiv, industry insights, and trending discussion topics from the tech community.
                         </div>
-                        <a href="podcast/research_roundup_2025-06-26.mp3" class="download-button" download>
-                            📥 Download (11.7 MB)
+                        <a href="podcast/podcast_20250624.mp3" class="download-button" download>
+                            📥 Download (20.3 MB)
                         </a>
                     </div>
                     
@@ -663,13 +663,28 @@
                             🎙️ Startup Spotlight
                         </div>
                         <div class="item-meta">
-                            📅 2025-06-25 • ⏱️ 9:48
+                            📅 2025-06-25
                         </div>
                         <div class="item-description">
                             Featured discussions about emerging startups, funding rounds, and innovative business models disrupting traditional industries.
                         </div>
-                        <a href="podcast/startup_spotlight_2025-06-25.mp3" class="download-button" download>
-                            📥 Download (6.9 MB)
+                        <a href="podcast/podcast_20250625.mp3" class="download-button" download>
+                            📥 Download (16.3 MB)
+                        </a>
+                    </div>
+
+                    <div class="podcast-item">
+                        <div class="item-title">
+                            🎙️ Startup Spotlight
+                        </div>
+                        <div class="item-meta">
+                            📅 2025-06-26
+                        </div>
+                        <div class="item-description">
+                            Quite a turn in today's topics as big news shifts to videos and content creation.
+                        </div>
+                        <a href="podcast/podcast_20250626.mp3" class="download-button" download>
+                            📥 Download (16.5 MB)
                         </a>
                     </div>
                 `;
