--- a/index.html
+++ b/index.html
@@ -364,7 +364,6 @@
                 <div class="hero-content">
                     <h1>Welcome to MattGPT</h1>
                     <p>Your intelligent research companion that transforms how you discover, analyze, and consume information. From automated hot topics detection to AI-generated podcasts, MattGPT brings cutting-edge AI research capabilities to your fingertips.</p>
-                    <a href="#" class="cta-button" onclick="showTab('architecture')">🚀 Explore Platform</a>
                 </div>
             </div>
             
@@ -546,7 +545,7 @@
                             <p style="color: var(--neutral-600); margin-bottom: 25px; max-width: 600px; margin-left: auto; margin-right: auto;">
                                 Explore comprehensive technical documentation, workflow diagrams, interactive demonstrations, and detailed implementation guides for every component of the MattGPT platform.
                             </p>
-                            <a href="architecture.html" class="cta-button">
+                            <a href="architecture.html" class="cta-button" target="_blank">🚀 Explore Platform</a>
                                 📖 Explore Technical Architecture
                             </a>
                         </div>
