--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
         .podcast-grid, .review-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+            grid-template-columns: repeat(auto-fill, minmax(min(50vw, 600px), 1fr));
             gap: 20px;
             margin: 20px 0;
         }
