--- a/index.html
+++ b/index.html
@@ -369,16 +369,10 @@
             
             <div class="main-content">
                 <div class="video-container">
-                    <h3>🎬 Learn About MattGPT</h3>
-                    <div class="video-placeholder" id="videoContainer">
-                        <video controls style="display: none;" id="aboutVideo">
-                            <source src="aboutMattGPT.mp4" type="video/mp4">
-                            Your browser does not support the video tag.
-                        </video>
-                        <div id="videoPlaceholder">
-                            Video: aboutMattGPT.mp4
+                    <h3>MattGPT is an Agentic AI based entirely on Open Source and free code</h3>
+                         <div class="image-container" id="imageContainer">
+                            <img src="aboutMattGPT.png" alt="About Matt GPT" id="aboutImage" style="max-width: 100%; height: auto;">
                         </div>
-                    </div>
                     <p style="color: var(--neutral-600); font-size: 0.9em;">Discover how MattGPT revolutionizes research workflows with AI-powered automation</p>
                 </div>
 
